--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>AI Tools & Software for US Users</title>
     <meta name="description" content="Discover the best AI tools and software for students and professionals in the USA.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -31,3 +31,4 @@
 
 </body>
 </html>
+
